# owl2-reasoner

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCUMENTATION_GUIDELINES.md  FILE_MOVEMENT_GUIDE.md  OPENEVOLVE_OPTIMIZATION_PLAN.md  PERFORMANCE_BASELINE.md  PERFORMANCE_COMPARISON.md  PROJECT_COMPARISON.md  PROJECT_REORGANIZATION_PLAN.md  PaperAlgorithm.md  README.md  SYSTEM_VALIDATION_REPORT.md  TODOS.md  advanced_test_report.txt  comparative_analysis_report.txt  complex_axiom_performance_report.txt  debug_tokenizer  enhanced_memory_profile_report.txt  external_benchmark_report.md  final_performance_report.txt  memory_report.txt  owl2-reasoner-codebase-complete-ontology.ttl  owl2-reasoner-codebase-instances.ttl  owl2-reasoner-codebase-ontology.ttl  performance_comparison_table.txt  performance_measurement_report.txt  real_external_benchmark.py  real_world_performance_report.txt  tableaux_evaluator.py  tableaux_optimization.rs  todos.md  update_docs.sh  validation_report.txt
archive/: epcis_performance_benchmark.rs  large_scale_epcis_test.rs  medium_scale_epcis_test.rs  multi_participant_test.rs  real_world_test.rs  small_scale_epcis_test.rs  supply_chain_traceability_test.rs  tableaux_demo  tableaux_optimization_demo.rs  test_actual_file.rs  test_investigation.rs
archive/openevolve_optimization/: COMPLETE_AUDIT_REPORT.md  CORRECTED_PERFORMANCE_RESULTS.md  HONEST_BENCHMARK_ANALYSIS.md  OPTIMIZATION_RESULTS_FINAL.md  evolved_test  (+16 more)
benches/: algorithmic_complexity.rs  basic_benchmarks.rs  cache_performance.rs  comprehensive_benchmarks.rs  concurrent_reasoning.rs  entity_size_calculator_benchmark.rs  iai_callgrind_bench.rs  memory_bench.rs  memory_profiler.rs  memory_safety_benchmarks.rs  memory_tracking_bench.rs  mod.rs  mod_bench.rs  optimization_benchmarks.rs  owl2_benchmarks.rs  parser_bench.rs  performance_validation.rs  profile_validation_bench.rs  query_bench.rs  query_optimization_bench.rs  rdfxml_parser_bench.rs  reasoning_bench.rs  scalability_bench.rs  scale_testing.rs  simple_benchmarks.rs  simple_performance_validation.rs  tableaux_benchmarks.rs
benchmarking/: IMPLEMENTATION_SUMMARY.md  LUBM_SP2B_Implementation_Guide.md  README_Enhanced_Benchmarking.md  advanced_test_report.txt  benchmark_framework.py  setup_benchmarks.py  setup_reasoners.sh
docs/: BENCHMARKING.md  MEMORY_SAFE_TESTING.md  README.md
examples/: advanced_test_runner.rs  biomedical_ontology.rs  cache_usage.rs  complete_validation.rs  complex_axiom_test.rs  compliance_test_simple.rs  consistency_benchmark.rs  ecosystem_integration_examples.rs  empirical_validation.rs  epcis_validation_suite.rs  evolution_success_summary.rs  family_ontology.rs  gs1_epcis_production_demo.rs  import_resolution_example.rs  performance_benchmarking.rs  proof_owl2_parsing.rs  real_world_simulation.rs  reasoning_demonstration.rs  scale_test_simple.rs  simple_example.rs  simple_test_runner.rs  test_benchmark_cli_style.rs  test_individual_equality.rs  test_no_validation.rs  test_nominals.rs  test_owl_parser.rs  test_property_assertions.rs  test_property_characteristics.rs  test_property_hierarchy.rs  w3c_test_runner.rs  web_service_example.rs
openevolve_optimization/: .gitignore  ALGORITHM_EVOLUTION_STEPS.md  Cargo.toml  README.md  VISUALIZATION_README.md  comprehensive_test.rs  correctness_validation  correctness_validation.rs  evaluator.py  evaluator_simple.py  initial_program.rs  integrated_benchmark  integrated_reasoner  optimized_query_processor.rs  optimized_rule_system  realistic_benchmark.rs  rule_optimization_target.rs  rule_test  run_evolution_simple.py  run_tableaux_evolution.py  stress_test.py  subclass_evaluator.py  subclass_initial_program.rs
openevolve_optimization/openevolve_output/best/: best_program.rs
scripts/: run_benchmarks.sh  update_docs.sh
src/: axioms.rs  cache.rs  cache_manager.rs  config.rs  emergency_protection.rs  entities.rs  epcis.rs  epcis_generator.rs  epcis_parser.rs  epcis_test_generator.rs  error.rs  graceful_degradation.rs  iri.rs  lib.rs  memory.rs  memory_aware_allocation.rs  memory_protection.rs  ontology.rs  parser.rs  profiles.rs  python_bindings.rs  reasoning.rs  storage.rs  test_helpers.rs  test_memory_guard.rs  web_service.rs
tests/: README.md  backtracking_tests.rs  comprehensive_integration_tests.rs  core_iri_entity_tests.rs  equality_reasoning_comprehensive_tests.rs  equality_reasoning_tests.rs  integration_end_to_end_tests.rs  json_ld_comprehensive_tests.rs  mod.rs  parser_tests.rs  profile_optimization_comprehensive_tests.rs  profile_optimization_tests.rs  property_characteristics_reasoning_tests.rs  property_tests.proptest-regressions  property_tests.rs  rdf_xml_streaming_tests.rs  rollback_non_deterministic_tests.rs  validation_tests.rs
(+233 files in other folders)
