[package]
name = "owl2-reasoner"
version = "0.1.0"
edition = "2024"

[dependencies]
# RDF and OWL parsing
rio_api = "0.8"
rio_turtle = "0.8"
rio_xml = "0.8"
oxiri = "0.2"
sophia = "0.8"

# Data structures and algorithms
petgraph = "0.6"
indexmap = "2.0"
hashbrown = "0.14"
bit-set = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and debugging
log = "0.4"
env_logger = "0.10"

# Utilities
itertools = "0.12"
once_cell = "1.19"
regex = "1.10"

# Performance
rayon = "1.8"
crossbeam = "0.8"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
tempfile = "3.8"

[[bench]]
name = "basic_benchmarks"
harness = false

[lib]
name = "owl2_reasoner"
path = "src/lib.rs"
