[package]
name = "owl2-reasoner"
version = "0.1.0"
edition = "2021"

[dependencies]
# RDF and OWL parsing
rio_api = "0.8"
rio_turtle = "0.8"
rio_xml = "0.8"
oxiri = "0.2"
sophia = "0.8"

# Data structures and algorithms
petgraph = "0.6"
indexmap = "2.0"
hashbrown = "0.14"
bit-set = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
xmltree = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and debugging
log = "0.4"
env_logger = "0.10"

# Validation and benchmarking
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.13"

# Utilities
itertools = "0.12"
once_cell = "1.19"
regex = "1.10"

# Performance
rayon = "1.8"
crossbeam = "0.8"
dashmap = "5.5"
libc = "0.2"
bumpalo = "3.14"
smallvec = "1.13"
parking_lot = "0.12"
lru = "0.12"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Random generation
rand = "0.8"

# Test suite integration
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"
owl2-reasoner-test-suite = { path = "../owl2-reasoner-test-suite" }
clap = { version = "4", features = ["derive"] }
 
[features]
# Default to streaming RDF/XML backend in non-strict mode
default = ["rio-xml"]
rio-xml = []

[[bench]]
name = "basic_benchmarks"
harness = false

[[bench]]
name = "performance_validation"
harness = false

[[bench]]
name = "scale_testing"
harness = false

[lib]
name = "owl2_reasoner"
path = "src/lib.rs"

[[example]]
name = "family_ontology"
path = "examples/basic/family_ontology.rs"

[[example]]
name = "biomedical_ontology"
path = "examples/basic/biomedical_ontology.rs"

[[example]]
name = "simple_example"
path = "examples/basic/simple_example.rs"

[[example]]
name = "benchmark_cli"
path = "examples/benchmarking/benchmark_cli.rs"

[[example]]
name = "performance_benchmarking"
path = "examples/benchmarking/performance_benchmarking.rs"

[[example]]
name = "complete_validation"
path = "examples/validation/complete_validation.rs"

[[example]]
name = "comparative_analysis"
path = "examples/advanced/comparative_analysis.rs"

[[example]]
name = "cache_usage"
path = "examples/cache_usage.rs"

[[example]]
name = "epcis_validation_suite"
path = "examples/advanced/epcis_validation_suite.rs"

[[example]]
name = "real_world_simulation"
path = "examples/advanced/real_world_simulation.rs"

 
